2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: now the center of mass function places an 'S' and a 'E' on the center of mass plot to indicate start and end points for dataset.
	* get_bead.m: added reference to bead ID rather than hard-coded column number.

2006-10-26  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: function now terminates gracefully when input is empty.

2006-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: turns out that those diff tags were not the only thing cvs added to my file because of a conflict.  It copied the entire function.  This confused me until Kalpit set me straight.  Everything should be functioning correctly now (har har).

2006-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: removed cvs diff tag information that was mistakenly incorporated into file.

2006-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: now concatenates all computed drift vectors for all beads instead of just the last one.

2006-08-08  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: removed text output that reported how much drift was removed.  This information is already an output variable.

2006-08-02  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: removed PULSE and SEQ column headers.  added documentation.

2006-07-03  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Increased the filter order to 8 for reducing stage sensor electronic noise, in order to achieve steep rolloff.
	- Reduced the cutoff frequency to 550, still sticking to butterworth for its monotonicity.

2006-06-20  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Fixed a bug while checking if filtering of stage position from input edited file is possible.

2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: added PULSE and SEQ to column headers.
	* remove_drift.m: only existing trackers are queried.
